RLumShiny 0.2.1 (Release date: 2017-xx-xx)
==============

* New application to calculate the fast ratio of CW-OSL curves after Durcan
  and Duller (2011). Base function: `Luminescence::calc_FastRatio()`.
  Keyword for `app_RLum()`: 'fastratio'.
  
* Output panel showing the R code to reproduce the plot/calculation is now
  properly responsive and updates as soon as input widgets change.

* Internal: server logic of most applications simplified.
  
* Several minor bugfixes.

RLumShiny 0.2.0 (Release date: 2017-06-26)
==============

* Major overhaul of the data input panel for most applications. Uploaded text
  files are now imported via 'data.table::fread()', which automatically
  detects the delimiter and potential headers. Hence, all widgets related to
  data import are no longer required and were removed (#14).

* The input data can now be directly manipulated in the newly added spreadsheet(s)
  in the data input panels. The spreadsheets also allow copy and pasting of data,
  so uploading a file is no longer the only way to provide user data (#12).

* New Dashboard addin added. The dashboard provides access to all available
  applications in the package and can be accessed either (i) through the
  addin dropdown menu in the RStudio IDE or (ii) by running 'app_RLum()' without
  any keyword.

* Implemented newest shiny feature (v0.14) to bookmark the current app state. 
  All apps now include a bookmark button, which returns a URL query string that
  can be used to restore the app's state at any later time.

* New application to plot filter combinations along with the optional
  net transmission. Base function: `Luminescence::plot_FilterCombinations()`.
  Keyword for `app_RLum()`: 'filter'. External contribution by Urs Tilmann
  Wolpert (Justus-Liebig-University Giessen) and Sebastian Kreutzer
  (Universite Bordeaux Montaigne).
  
* New package dependencies: 'shinydashboard', 'rhandsontable', 'data.table', 'readxl'
  
* transformCW-app: 